# MI-23

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/host/: CMakeLists.txt
cmake/host/sdl_simulator/: CMakeLists.txt
cmake/rp2350/: CMakeLists.txt
cmake/toolchains/: mingw64.cmake
firmware/: CMakeLists.txt  main_host.cpp
firmware/app/: calculator_app.cpp  calculator_app.h
firmware/app/calculator/: calculator_app.cpp  calculator_app.h  history.h
firmware/app/home/: calculator_home.cpp  calculator_home.h
firmware/core/: expression.cpp  expression.h
firmware/drivers/st7789/: st7789.cpp
firmware/graphics/: font.h
firmware/hal/: display.h  keypad.h
firmware/hal/host/: display_sdl.cpp  display_sdl.h  keypad_host.cpp  keypad_host.h
firmware/hal/rp2350/: display_rp2350.cpp  display_rp2350.h  keypad_rp2350.cpp  keypad_rp2350.h  main_rp2350.cpp  st7789.cpp  st7789.h
firmware/hal/rp2350/config/: pin_config.h
firmware/hal/rp2350/drivers/: st7789.cpp
firmware/hal/rp2350/hal/: display_rp2350.cpp  display_rp2350.h  keypad_rp2350.cpp  keypad_rp2350_2.cpp
firmware/math/: CMakeLists.txt  expression.cpp  expression.h  math_typeset.cpp  math_typeset.h
firmware/platform/host/: display_sdl.cpp  display_sdl.h  keypad_host.cpp  main_host.cpp
firmware/platform/rp2350/: display_rp2350.cpp  display_rp2350.h  keypad_rp2350.cpp  keypad_rp2350.h  keypad_rp2350_2.cpp  keypad_rp2350_2.h  main_rp2350.cpp
firmware/platform/rp2350/config/: pin_config.h
firmware/tests/: CMakeLists.txt  test_expression.cpp
firmware/ui/: calculator_app.cpp  calculator_app.h  history.h
tests/: CMakeLists.txt  test_expression.cpp  test_math_typeset.cpp
